# semi-discrete-Wasserstein-barycenter

./: .gitignore  CMakeLists.txt  README.md  draw_segements.hpp  semi-discrete.cpp
data/: .gitignore  randomdata.py
include/: barycenter.hpp  draw_segements.hpp  integration.hpp  intersection.hpp  laguerre-cell.hpp  power-diagram.hpp
src/: arrangement.cpp  chain-merging-crop.cpp  crop-cell.cpp  crop.cpp  draw.cpp  draw_example.cpp  integration.cpp  laguerre-cell.cpp  linear-programming.cpp  marginals.cpp  numerical-solver.cpp  numerical_solver.cpp  parallel-crop.cpp  power-diagram.cpp  qt-draw-example.cpp  qt_draw_example.cpp  rotation-crop.cpp  semi-discrete.cpp  test.cpp  update-data.cpp
